<resources>
    <string name="app_name">Minsk Airport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">National Airport Minsk</string>
    <string name="nav_header_subtitle">Timetable</string>
    <string name="nav_header_desc">Airport</string>
    <string name="action_settings">Settings</string>
    <string name="refresh_button">Refresh</string>
    <string name="details">Details</string>
    <string name="gate">Gate</string>
    <string name="boarding_gate">Boarding gate</string>
    <string name="registration_desk">Registration desk</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="tools">Tools</string>
    <string name="settings">Settings</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="localization">Localization</string>

    <string name="airborne">Airborne</string>
    <string name="arrived">Arrived</string>
    <string name="canceled">Cancelled</string>
    <string name="checkin">Check-in</string>
    <string name="boarding">Boarding</string>
    <string name="boarding_finished">Boarding finished</string>
    <string name="landed">Landed</string>
    <string name="leaving">Leaving</string>
    <string name="delayed">Delayed</string>
    <string name="enroute">En Route</string>
    <string name="checkinclosed">Check-in closed</string>

    <string name="pref_key_language">Preference key language</string>
    <string name="language_pref">Language</string>
    <string name="expected_label">Expected</string>
    <string name="actual_label">Actual</string>
</resources>
