<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/airport"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/airport"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:shadowColor="#111"
            android:shadowRadius="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="@font/roboto"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="20dp"
            android:shadowColor="#333"
            android:shadowRadius="5"
            android:id="@+id/textView"
            android:fontFamily="@font/roboto"/>

</FrameLayout>
